--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -9,11 +9,6 @@
                 <div class="text-sm min-w-0 flex-1 sm:flex sm:items-center">
                   <div class="flex">
                     <p class="font-medium text-gray-900 truncate"><%= event.title %></p>
-                    <% if event.location %>
-                      <p class="ml-1 flex-shrink-0 font-normal text-gray-500">
-                        in <%= event.location %>
-                      </p>
-                    <% end %>
                   </div>
                   <div class="flex flex-shrink-0 text-sm">
                     <% if event.public? %>
@@ -32,19 +27,23 @@
                     <% end %>
                   </div>
                 </div>
-                <div class="mt-2 flex">
-                  <div class="flex items-center text-sm text-gray-500">
-                    <svg class="flex-shrink-0 mr-1.5 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                      <path fill-rule="evenodd" d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z" clip-rule="evenodd"/>
-                    </svg>
-                    <p>
+                <div class="mt-2 flex items-center text-sm text-gray-500">
+                  <div class="flex ">
+                    <%= heroicon('calendar', class_name: "flex-shrink-0 mr-1 h-4 w-4 text-gray-400 self-center") %>
+                    <span>
                       <% if event.today? %>
                         <time><%= event.date.strftime('Vandaag om %H:%M') %></time>
                       <% else %>
                         <time><%= event.date.strftime('Op %d-%m-%Y om %H:%M') %></time>
                       <% end %>
-                    </p>
+                    </span>
                   </div>
+                  <% if event.location %>
+                    <div class="flex">
+                      <%= heroicon('location-marker', class_name: "flex-shrink-0 mr-1 ml-2 h-4 w-4 text-gray-400 self-center") %>
+                      <span><%= event.location %></span>
+                    </div>
+                  <% end %>
                 </div>
               </div>
               <div class="mt-4 flex-shrink-0 sm:mt-0 sm:ml-5">
