--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -31,11 +31,13 @@
       <div class="p-2 sm:p-4 border-t border-gray-200">
         <div class="flex flex-wrap content-center justify-evenly">
           <% @user.usergroups.each do |group| %>
-            <div class="h-12 w-12 m-2 text-sm font-medium text-gray-900 popover"
-                 data-controller="popover"
-                 data-action="mouseover->popover#mouseOver mouseout->popover#mouseOut"
-                 data-popover-translate-x="0"
-                 data-popover-translate-y="15%">
+            <%= link_to usergroup_path(group),
+                        class: "h-12 w-12 m-2 text-sm font-medium text-gray-900 popover",
+                        data: { controller: "popover",
+                                action: "mouseover->popover#mouseOver mouseout->popover#mouseOut",
+                                popover_translate_x: "0",
+                                popover_translate_y: "15%",
+                        } do %>
               <% if group.logo.attached? %>
                 <%= image_tag group.logo.representation(resize_to_limit: [100, 100]), class: "rounded-full", alt: group.name %>
               <% else %>
@@ -44,7 +46,7 @@
               <div class="content hidden absolute bg-gray-100 border border-gray-200 text-gray-700 rounded p-3" data-popover-target="content">
                 <%= group.name %>
               </div>
-            </div>
+            <% end %>
           <% end %>
         </div>
       </div>
