--- a/app/views/shared/_next_event.html.erb
+++ b/app/views/shared/_next_event.html.erb
@@ -4,7 +4,7 @@
     <h2 class="font-bold tracking-tight text-gray-900 text-2xl text-justify">
       <%= link_to @next_event.title, @next_event %>
     </h2>
-    <h3 class="text-gray-600">In <%= time_ago_in_words(@next_event.date) %></h3>
+    <h3 class="text-gray-600">Over <%= time_ago_in_words(@next_event.date) %></h3>
     <div class="mt-8 flex">
       <div class="inline-flex rounded-md shadow w-full">
         <% if @signup %>
