--- a/app/views/shared/_quote_form.html.erb
+++ b/app/views/shared/_quote_form.html.erb
@@ -6,7 +6,7 @@
         <div>
           <div class="mt-1">
             <%= f.text_area :text,
-                placeholder: 'Wat zei die lul?',
+                placeholder: 'Wat zei die lul of kut?',
                 rows: 2,
                 class: 'shadow-sm focus:ring-hamers-red-500 focus:border-hamers-red-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md' %>
           </div>
