--- a/app/views/shared/_trail.html.erb
+++ b/app/views/shared/_trail.html.erb
@@ -2,14 +2,14 @@
   <%= link_to trail_path do %>
     <h2 class="text-hamers-red-400 text-xl font-bold m-4">Wat is er gebeurd?</h2>
   <% end %>
+
   <div class="flex items-center">
     <ul class="divide-y divide-gray-200 w-full">
       <% @trail.each do |t| %>
         <li class="py-2 px-4 w-full">
           <div class="flex space-x-3">
-            <% if t.whodunnit %>
-              <%= gravatar_for User.find(t.whodunnit), class: "h-6 w-6 rounded-full" %>
-            <% end %>
+            <%= gravatar_for User.find(t.whodunnit), class: "h-6 w-6 rounded-full" if t.whodunnit %>
+
             <% case t.item_type %>
             <% when "Quote" %>
               <div class="flex-1 space-y-1">
@@ -40,6 +40,7 @@
                 </div>
                 <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
               </div>
+            <% when "ActionText::RichText" %>
             <% else %>
               <div class="flex-1 space-y-1">
                 <div class="flex items-center justify-between">
