--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -2,62 +2,67 @@
   Log
 <% end %>
 
-<div>
-  <ul role="list" class="divide-y divide-gray-200">
-    <% @trail.each do |t| %>
-      <% user = User.find(t.whodunnit) if t.whodunnit %>
-      <li class="py-4">
-        <div class="flex space-x-3">
-          <%= gravatar_for user %>
-          <div class="flex-1 space-y-1">
-            <div class="flex items-center justify-between">
-              <h3 class="text-sm font-medium"><%= user&.name || "webapp" %></h3>
-              <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
-            </div>
-            <div class="flex justify-between">
-              <p class="text-sm text-gray-500">
-                <% case t.item_type %>
-                <% when "Quote" %>
-                  <% if t.item %>
-                    <span class="text-sm font-medium"><%= "citeerde #{t.item.user.name}" %></span>
-                  <% else %>
-                    <span class="text-sm font-medium"><%= "citeerde onjuist" %></span>
-                  <% end %>
-                <% when "Blogitem" %>
-                  <span class="text-sm font-medium"><%= link_to "schreef aan #{t.item.title}", t.item %></span>
-                <% when "Signup" %>
-                  <% if t.object %>
-                    <span class="text-sm font-medium"><%= link_to "heeft zich #{t.object["status"] ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %></span>
-                  <% else %>
-                    <span class="text-sm font-medium"><%= link_to "heeft zich #{t.item.status ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %></span>
-                  <% end %>
+<ul role="list" class="divide-y divide-gray-200">
+  <% @trail.each do |t| %>
+    <% user = User.find(t.whodunnit) if t.whodunnit %>
+
+    <li class="py-2 flex flex-col">
+
+      <div class="flex space-x-3">
+        <%= gravatar_for user if user %>
+        <div class="flex-1 space-y-1">
+          <div class="flex items-center justify-between">
+            <h3 class="text-sm font-medium"><%= user&.name || "webapp" %></h3>
+            <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
+          </div>
+          <div class="flex justify-between">
+            <p class="text-sm text-gray-500 font-medium">
+              <% case t.item_type %>
+              <% when "Quote" %>
+                <% if t.item %>
+                  <%= "citeerde #{t.item.user.name}" %>
                 <% else %>
-                  <span class="text-sm font-medium"><%= link_to "#{t.event}d #{t.item_type}", t.item %></span>
+                  <%= "citeerde onjuist" %>
                 <% end %>
-              </p>
-              <div>
-                <%= form_for "x", url: "/revert/#{t.item_type}/#{t.item_id}" do |f| %>
-                  <%= f.submit "Revert", class: submit_classes %>
+              <% when "Blogitem" %>
+                <%= link_to "schreef aan #{t.item.title}", t.item %>
+              <% when "Signup" %>
+                <% if t.object %>
+                  <%= link_to "heeft zich #{t.object["status"] ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %>
+                <% else %>
+                  <%= link_to "heeft zich #{t.item.status ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %>
                 <% end %>
-              </div>
+              <% when "ActionText::RichText" %>
+                asdfasdfasfd
+              <% else %>
+                <%= link_to "#{t.event}d #{t.item_type}", t.item %>
+              <% end %>
+            </p>
+            <div>
+              <%= form_for "x", url: "/revert/#{t.item_type}/#{t.item_id}" do |f| %>
+                <%= f.submit "Revert", class: submit_classes %>
+              <% end %>
             </div>
-            <div class="divide-y-2 divide-hamers-red-500">
-            <% t.changeset.each do |c, v| %>
-            <% next if c == 'updated_at' || c == 'created_at' %>
-            <div class="py-4 sm:py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-              <dt class="text-sm font-medium text-gray-500">
-                <%= c.to_s %>
-              </dt>
-              <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2 pr-16">
-                <%== Diffy::Diff.new(v[0], v[1]).to_s(:html_simple) %>
-              </dd>
-            </div>
-            <% end %>
           </div>
         </div>
-      </li>
-    <% end %>
-  </ul>
-</div>
+
+      </div>
+      <div class="divide-y divide-hamers-red-500 px-8 text-sm font-medium">
+        <% t.changeset.each do |c, v| %>
+          <% next if c == 'updated_at' || c == 'created_at' %>
+          <div class="py-2 sm:py-4 sm:grid sm:grid-cols-3 sm:gap-4">
+            <dt class="text-gray-500">
+              <%= c.to_s %>
+            </dt>
+            <dd class="mt-1 text-gray-900 sm:mt-0 sm:col-span-2">
+              <%== Diffy::Diff.new(v[0], v[1]).to_s(:html_simple) %>
+            </dd>
+          </div>
+        <% end %>
+      </div>
+
+    </li>
+  <% end %>
+</ul>
 
 <%= render 'shared/pagination/default' %>
