--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -7,9 +7,13 @@
     <% user = User.find(t.whodunnit) if t.whodunnit %>
 
     <li class="py-2 flex flex-col">
-
       <div class="flex space-x-3">
-        <%= gravatar_for user if user %>
+        <% if user %>
+          <%= gravatar_for user, class: "h-6 w-6 rounded-full" %>
+        <% else %>
+          <%= image_tag 'hamer_square_256.png', class: "h-6 w-6 rounded-full" %>
+        <% end %>
+
         <div class="flex-1 space-y-1">
           <div class="flex items-center justify-between">
             <h3 class="text-sm font-medium"><%= user&.name || "webapp" %></h3>
