--- a/app/views/static_pages/trail.html.erb
+++ b/app/views/static_pages/trail.html.erb
@@ -7,7 +7,7 @@
     <% user = User.find(t.whodunnit) if t.whodunnit %>
 
     <li class="py-2 flex flex-col">
-      <div class="flex space-x-3">
+      <div class="flex space-x-3 pb-2">
         <% if user %>
           <%= gravatar_for user, class: "h-6 w-6 rounded-full" %>
         <% else %>
@@ -32,21 +32,29 @@
                 <%= link_to "schreef aan #{t.item.title}", t.item %>
               <% when "Signup" %>
                 <% if t.object %>
-                  <%= link_to "heeft zich #{t.object["status"] ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %>
+                  <%#= link_to "heeft zich #{t.object["status"] ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %>
                 <% else %>
                   <%= link_to "heeft zich #{t.item.status ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %>
                 <% end %>
               <% when "ActionText::RichText" %>
-                asdfasdfasfd
+                <%#= link_to "wijzigde opgemaakte tekst", t.item.record %>
               <% else %>
-                <%= link_to "#{t.event}d #{t.item_type}", t.item %>
+                <%= link_to t.item do %>
+                  <% case t.event %>
+                  <% when "destroy" %>
+                    verwijderde
+                  <% when "update" %>
+                    wijzigde
+                  <% end %>
+                <% end %>
+                <%= t.item_type %>
               <% end %>
             </p>
-            <div>
+            <% unless t.item_type == "ActionText::RichText" %>
               <%= form_for "x", url: "/revert/#{t.item_type}/#{t.item_id}" do |f| %>
                 <%= f.submit "Revert", class: submit_classes %>
               <% end %>
-            </div>
+            <% end %>
           </div>
         </div>
 
@@ -54,8 +62,8 @@
       <div class="divide-y divide-hamers-red-500 px-8 text-sm font-medium">
         <% t.changeset.each do |c, v| %>
           <% next if c == 'updated_at' || c == 'created_at' %>
-          <div class="py-2 sm:py-4 sm:grid sm:grid-cols-3 sm:gap-4">
-            <dt class="text-gray-500">
+          <div class="py-2 sm:grid sm:grid-cols-3 sm:gap-4">
+            <dt class="text-gray-600">
               <%= c.to_s %>
             </dt>
             <dd class="mt-1 text-gray-900 sm:mt-0 sm:col-span-2">
@@ -64,7 +72,6 @@
           </div>
         <% end %>
       </div>
-
     </li>
   <% end %>
 </ul>
