Use presenter in _trail.html.erb (homepage)

--- a/app/views/shared/_trail.html.erb
+++ b/app/views/shared/_trail.html.erb
@@ -6,55 +6,17 @@
   <div class="flex items-center">
     <ul class="divide-y divide-gray-200 w-full">
       <% @trail.each do |t| %>
-        <% user = User.find(t.whodunnit) if t.whodunnit %>
+        <% presenter = TrailPresenter.new(t) %>
 
         <li class="py-2 px-4 w-full">
           <div class="flex space-x-3">
-            <% if user %>
-              <%= gravatar_for user, class: "h-6 w-6 rounded-full" %>
-            <% else %>
-              <%= image_tag 'hamer_square_256.png', class: "h-6 w-6 rounded-full" %>
-            <% end %>
-
-            <% case t.item_type %>
-            <% when "Quote" %>
-              <div class="flex-1 space-y-1">
-                <div class="flex items-center justify-between">
-                  <% if t.item %>
-                    <span class="text-sm font-medium"><%= "citeerde #{t.item.user.name}" %></span>
-                  <% else %>
-                    <span class="text-sm font-medium"><%= "citeerde onjuist" %></span>
-                  <% end %>
-                </div>
-                <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
+            <%= presenter.image %>
+            <div class="flex-1 space-y-1">
+              <div class="flex items-center justify-between">
+                <span class="text-sm font-medium"><%= presenter.message %></span>
               </div>
-            <% when "Blogitem" %>
-              <div class="flex-1 space-y-1">
-                <div class="flex items-center justify-between">
-                  <span class="text-sm font-medium"><%= link_to "schreef aan #{t.item.title}", t.item %></span>
-                </div>
-                <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
-              </div>
-            <% when "Signup" %>
-              <div class="flex-1 space-y-1">
-                <div class="flex items-center justify-between">
-                  <% if t.object %>
-                    <span class="text-sm font-medium"><%= link_to "heeft zich #{t.object["status"] ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %></span>
-                  <% else %>
-                    <span class="text-sm font-medium"><%= link_to "heeft zich #{t.item.status ? "ingeschreven" : "uitgeschreven"} voor #{t.item.event.title}", t.item %></span>
-                  <% end %>
-                </div>
-                <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
-              </div>
-            <% when "ActionText::RichText" %>
-            <% else %>
-              <div class="flex-1 space-y-1">
-                <div class="flex items-center justify-between">
-                  <span class="text-sm font-medium"><%= link_to "#{t.event}d #{t.item_type}", t.item %></span>
-                </div>
-                <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
-              </div>
-            <% end %>
+              <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
+            </div>
           </div>
         </li>
       <% end %>
