Also test for changes regarding rich texts and start on re-implementing links

--- a/app/views/shared/_trail.html.erb
+++ b/app/views/shared/_trail.html.erb
@@ -13,7 +13,9 @@
             <%= presenter.image %>
             <div class="flex-1 space-y-1">
               <div class="flex items-center justify-between">
-                <span class="text-sm font-medium"><%= presenter.message %></span>
+                <span class="text-sm font-medium">
+                  <% link_to presenter.message, presenter.link %>
+                </span>
               </div>
               <p class="text-sm text-gray-500"><%= time_ago_in_words(t.created_at) %> geleden.</p>
             </div>
