--- a/app/views/shared/_trail.html.erb
+++ b/app/views/shared/_trail.html.erb
@@ -10,7 +10,7 @@
 
         <li class="py-2 px-4 w-full">
           <div class="flex space-x-3">
-            <%= presenter.image %>
+            <%= gravatar_for User.find_by_id(t.whodunnit) %>
             <div class="flex-1 space-y-1">
               <div class="flex items-center justify-between">
                 <span class="text-sm font-medium">
