--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -45,7 +45,7 @@
         </div>
       <% end %>
 
-      <% if @user.lid? && !@missed_drinks&.empty? %>
+      <% unless @missed_drinks&.empty? %>
         <div class="p-2 sm:p-4 border-t border-gray-200">
           <h4>Gemiste dispuutsborrels</h4>
           <ul class="list-disc list-inside">
