--- a/app/views/shared/_trail.html.erb
+++ b/app/views/shared/_trail.html.erb
@@ -6,18 +6,16 @@
   <div class="flex items-center">
     <ul class="divide-y divide-gray-200 w-full">
       <% @trail.each do |t| %>
-        <% presenter = TrailPresenter.new(t) %>
-
         <li class="py-2 px-4 w-full">
           <div class="flex space-x-3">
             <%= gravatar_for User.find_by_id(t.whodunnit) %>
             <div class="flex-1 space-y-1">
               <div class="flex items-center justify-between">
                 <span class="text-sm font-medium">
-                  <% if presenter.has_link %>
-                    <%= link_to presenter.message, presenter.link %>
+                  <% if t.present.has_link %>
+                    <%= link_to t.present.message, t.present.link %>
                   <% else %>
-                    <%= presenter.message %>
+                    <%= t.present.message %>
                   <% end %>
                 </span>
               </div>
