Display average rating on beers/show

--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -30,6 +30,9 @@
         <%= render @reviews %>
       </ul>
     </div>
+    <p class="p-2 text-gray-900 text-center">
+      Gemiddeld cijfer: <%= @beer.cijfer %>
+    </p>
   </div>
 
   <aside class="md:col-span-3 md:pl-6">
