--- a/app/views/beers/_table.html.erb
+++ b/app/views/beers/_table.html.erb
@@ -47,7 +47,7 @@
                   <%= beer.kind %>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
-                  <%= beer.cijfer? %>
+                  <%= beer.cijfer %>
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                   <%= beer.brewer %>
