--- a/app/views/shared/_random_biertje.html.erb
+++ b/app/views/shared/_random_biertje.html.erb
@@ -44,7 +44,7 @@
             </h3>
             <div class="col-span-1 flex flex-col justify-between">
               <p class="object-bottom text-xl font-medium text-hamers-red-500">
-                <%= @random_beer.cijfer? %>
+                <%= @random_beer.cijfer %>
               </p>
               <p class="object-bottom text-xs font-medium text-gray-500">
                 <%= pluralize(@random_beer.reviews.count, 'review', 'reviews') %>
